corrigindo erros acessibilidade do site

--- a/produtos/outsourcing.html
+++ b/produtos/outsourcing.html
@@ -15,54 +15,54 @@
 </head>
 <body>
     <!-- cabeçalho -->
-
     <header class="header-bistec" id="#first_section">
-            <a href="#first_section" class="logo-bistec">
-                <img src="../assets/images/logo-bistec.png" alt="Logo - Bistec">
-            </a>
-            <ul class="normal-menu">
-                <li>
-                    <a href="../index.html" class="normal" >HOME</a>
-                </li>
-                <li><!--Portifólio-->
-                    <a href="#bistec-automaçao" class="normal">PORTFÓLIO <ion-icon name="chevron-down-outline"></ion-icon></a>  
-                    <ul class="normal-submenu">
-                        <li><a href="automacao.html"><ion-icon name="at-sharp"></ion-icon> BISTEC AUTOMAÇÃO</a></li>
-                        <li><a href="cloud.html"> <ion-icon name="cloud-done-sharp"></ion-icon> BISTEC CLOUD</a></li>
-                        <li><a href="edu.html"> <ion-icon name="pencil-sharp"></ion-icon> BISTEC EDU</a></li>
-                        <li><a href="gdpr.html"><ion-icon name="shield-checkmark-sharp"></ion-icon> BISTEC GDPR</a></li>
-                        <li><a href="msp.html"> <ion-icon name="lock-closed"></ion-icon> BISTEC MSP</a></li>
-                        <li><a href="outsourcing.html"> <ion-icon name="settings-sharp"></ion-icon> BISTEC OUTSOURCING</a></li>
-                        <li><a href="renting.html"> <ion-icon name="reload-circle-sharp"></ion-icon> BISTEC RENTING</a></li>
-                        <li><a href="soft.html"><ion-icon name="disc-sharp"></ion-icon> BISTEC SOFT</a></li>
-                        <li><a href="wifi.html"> <ion-icon name="wifi-sharp"></ion-icon> BISTEC WIFI</a></li>
-                    </ul> 
-                </li>
-                <li>
-                    <a href="../contato.html" class="normal">CONTATO</a>
-                </li>
-                <li><!--Butão de Loja-->
-                    <a href="https://www.cupomfiscaleletronico.com.br/" target="_blank">
-                        <div type="button" class="button" >
-                            <span class="button_icon"><ion-icon name="cart-outline"></ion-icon></span>
-                            <span class="button_text">LOJA</span>
-                        </div>
-                    </a>
-                </li>
-                <li><!--Botão Suporte-->
-                    <a href="../suporte.html">
-                        <div type="button" class="button_support">
-                            <span class="button_icon support_icon"><ion-icon name="headset-outline"></ion-icon></span>
-                            <span class="button_text">SUPORTE</span>
-                        </div>
-                    </a>
-                </li>
-            </ul>
-            <ul class="menu-cell">
-                <li>
-                    <ion-icon name="menu-outline"></ion-icon>                  
-                </li>
-            </ul>
+        <a href="#first_section" class="logo-bistec">
+            <img src="assets/images/logo-bistec.png" alt="Logo - Bistec">
+        </a>
+        <ul class="normal-menu">
+            <li>
+                <a href="index.html" class=" normal" >HOME</a>
+            </li>
+            <!--Portifólio-->
+            <li>
+                <a href="index.html" class="normal">PORTFÓLIO <ion-icon name="chevron-down-outline"></ion-icon></a>  
+                <ul class="normal-submenu">
+                    <li><a href="produtos/automacao.html"><ion-icon name="at-sharp"></ion-icon> BISTEC AUTOMAÇÃO</a></li>
+                    <li><a href="produtos/cloud.html"> <ion-icon name="cloud-done-sharp"></ion-icon> BISTEC CLOUD</a></li>
+                    <li><a href="produtos/edu.html"> <ion-icon name="pencil-sharp"></ion-icon> BISTEC EDU</a></li>
+                    <li><a href="produtos/gdpr.html"><ion-icon name="shield-checkmark-sharp"></ion-icon> BISTEC GDPR</a></li>
+                    <li><a href="produtos/msp.html"> <ion-icon name="lock-closed"></ion-icon> BISTEC MSP</a></li>
+                    <li><a href="produtos/outsourcing.html"> <ion-icon name="settings-sharp"></ion-icon> BISTEC OUTSOURCING</a></li>
+                    <li><a href="produtos/renting.html"> <ion-icon name="reload-circle-sharp"></ion-icon> BISTEC RENTING</a></li>
+                    <li><a href="produtos/soft.html"><ion-icon name="disc-sharp"></ion-icon> BISTEC SOFT</a></li>
+                    <li><a href="produtos/wifi.html"> <ion-icon name="wifi-sharp"></ion-icon> BISTEC WIFI</a></li>
+                </ul> 
+            </li>
+            <li>
+                <a href="./contato.html" class="normal">CONTATO</a>
+            </li>
+            <li><!--Butão de Loja-->
+                <a href="https://www.cupomfiscaleletronico.com.br/" target="_blank">
+                    <div class="button" >
+                        <span class="button_icon"><ion-icon name="cart-outline"></ion-icon></span>
+                        <span class="button_text">LOJA</span>
+                    </div>
+                </a>
+            </li>
+            <li><!--Botão Suporte-->
+                <a href="suporte.html">
+                    <div class="button_support">
+                        <span class="button_icon support_icon"><ion-icon name="headset-outline"></ion-icon></span>
+                        <span class="button_text">SUPORTE</span>
+                    </div>
+                </a>
+            </li>
+        </ul>
+        <ul class="menu-cell">
+            <li>
+                <ion-icon name="menu-outline"></ion-icon>                  
+            </li>
+        </ul>
     </header>
     <!-- banner -->
 
@@ -121,13 +121,13 @@
         <div class="contacts">
             <div class="contact item1">
                 <a href="#contacts_section" id="contacts_section">
-                    <img src="../assets/images/portugal.png" alt="Portugal País"> Bistec Portugal
+                    <img src="assets/images/portugal.png" alt="Portugal País"> Bistec Portugal
                 </a>
-                <p><a href="tel:+351 308 807 114">+351 308 807 114</a></p>
+                <p><a href="tel:+351308807114">+351 308 807 114</a></p>
             </div>
     
             <div class="contact item2">
-                    <a href="https://api.whatsapp.com/send?phone=5513992101945" target="_blank"><img src="../assets/images/whatsapp.png" alt="Logo Whatsapp Business"> Whatsapp Business </a>
+                    <a href="https://api.whatsapp.com/send?phone=5513992101945" target="_blank"><img src="assets/images/whatsapp.png" alt="Logo Whatsapp Business"> Whatsapp Business </a>
                 <p>
                     <a href="https://api.whatsapp.com/send?phone=5513992101945" target="_blank">+55 (13) 99210-1945</a>
                 </p>
@@ -135,18 +135,18 @@
     
             <div class="contact item3">
                 <a href="https://bistec.com.br">
-                    <img src="../assets/images/brazil.png" alt="Brasil País"> Bistec Brasil 
+                    <img src="assets/images/brazil.png" alt="Brasil País"> Bistec Brasil 
                 </a>  
                 <p>
-                    <a href="tel:+55 (13) 3235-7735">+55 (13) 3235-7735</a>  
+                    <a href="tel:+55(13)3235-7735">+55 (13) 3235-7735</a>  
                 </p>
                 <p>
-                    <a href="tel:+55 (13) 3522-8184">+55 (13) 3522-8184</a>
+                    <a href="tel:+55(13)3522-8184">+55 (13) 3522-8184</a>
                 </p>
             </div>
             <div class="contact item4">
                 <p>
-                    <img src="../assets/images/clock.png" alt="Logo Horário"> Funcionamento 
+                    <img src="assets/images/clock.png" alt="Logo Horário"> Funcionamento 
                 </p> 
                 <p>Segunda à Sexta:</p> 
                 <p>08:15h - 18:00h</p>
