--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </li>
                 <li><!--Butão de Loja-->
                     <a href="https://www.cupomfiscaleletronico.com.br/" target="_blank">
-                        <div type="button" class="button" >
+                        <div class="button" >
                             <span class="button_icon"><ion-icon name="cart-outline"></ion-icon></span>
                             <span class="button_text">LOJA</span>
                         </div>
@@ -50,7 +50,7 @@
                 </li>
                 <li><!--Botão Suporte-->
                     <a href="suporte.html">
-                        <div type="button" class="button_support">
+                        <div class="button_support">
                             <span class="button_icon support_icon"><ion-icon name="headset-outline"></ion-icon></span>
                             <span class="button_text">SUPORTE</span>
                         </div>
@@ -406,6 +406,7 @@
 
             </div>
         </section>
+    </article>
 
     <!-- rodapé -->
 
@@ -427,7 +428,7 @@
                 <a href="#contacts_section" id="contacts_section">
                     <img src="assets/images/portugal.png" alt="Portugal País"> Bistec Portugal
                 </a>
-                <p><a href="tel:+351 308 807 114">+351 308 807 114</a></p>
+                <p><a href="tel:+351308807114">+351 308 807 114</a></p>
             </div>
     
             <div class="contact item2">
@@ -442,10 +443,10 @@
                     <img src="assets/images/brazil.png" alt="Brasil País"> Bistec Brasil 
                 </a>  
                 <p>
-                    <a href="tel:+55 (13) 3235-7735">+55 (13) 3235-7735</a>  
+                    <a href="tel:+55(13)3235-7735">+55 (13) 3235-7735</a>  
                 </p>
                 <p>
-                    <a href="tel:+55 (13) 3522-8184">+55 (13) 3522-8184</a>
+                    <a href="tel:+55(13)3522-8184">+55 (13) 3522-8184</a>
                 </p>
             </div>
             <div class="contact item4">
