--- a/produtos/renting.html
+++ b/produtos/renting.html
@@ -137,21 +137,21 @@
         <div class="contacts">
             <div class="contact item1">
                 <a href="#contacts_section" id="contacts_section">
-                    <img src="assets/images/portugal.png" alt="Portugal País"> Bistec Portugal
+                    <img src="../assets/images/portugal.png" alt="Portugal País"> Bistec Portugal
                 </a>
                 <p><a href="tel:+351308807114">+351 308 807 114</a></p>
             </div>
-    
+
             <div class="contact item2">
-                    <a href="https://api.whatsapp.com/send?phone=5513992101945" target="_blank"><img src="assets/images/whatsapp.png" alt="Logo Whatsapp Business"> Whatsapp Business </a>
+                    <a href="https://api.whatsapp.com/send?phone=5513992101945" target="_blank"><img src="../assets/images/whatsapp.png" alt="Logo Whatsapp Business"> Whatsapp Business </a>
                 <p>
                     <a href="https://api.whatsapp.com/send?phone=5513992101945" target="_blank">+55 (13) 99210-1945</a>
                 </p>
             </div>
-    
+
             <div class="contact item3">
                 <a href="https://bistec.com.br">
-                    <img src="assets/images/brazil.png" alt="Brasil País"> Bistec Brasil 
+                    <img src="../assets/images/brazil.png" alt="Brasil País"> Bistec Brasil 
                 </a>  
                 <p>
                     <a href="tel:+55(13)3235-7735">+55 (13) 3235-7735</a>  
@@ -162,7 +162,7 @@
             </div>
             <div class="contact item4">
                 <p>
-                    <img src="assets/images/clock.png" alt="Logo Horário"> Funcionamento 
+                    <img src="../assets/images/clock.png" alt="Logo Horário"> Funcionamento 
                 </p> 
                 <p>Segunda à Sexta:</p> 
                 <p>08:15h - 18:00h</p>
