--- a/contato.html
+++ b/contato.html
@@ -69,13 +69,10 @@
 
     <!-- CORPO -->
     <article>
-        <form action="https://formsubmit.co/0e7f2fce85bd2065e42938316ca03ac1" method="POST" id="formContato">
+        <form action="https://formsubmit.co/bistec@bistec.com.br" method="POST" id="formContato">
             <input type="hidden" name="_next" value="http://bistec.com.pt">
             <input type="hidden" name="_autoresponse" value="Email Recebido. Obrigado e caso seja necessário, estaremos entrando em contato assim que possivel">
             <input type="hidden" name="_subject" value="Email Site Bistec Portugal">
-            <!-- <input type="hidden" name="_captcha" value="false"> -->
-            <!-- <input type="text" name="_honey" style="display:none"> -->
-
 
             <label id="labelTitulo">Formulário para contato</label>
 
