correção final acessibilidade

--- a/produtos/edu.html
+++ b/produtos/edu.html
@@ -21,7 +21,7 @@
         </a>
         <ul class="normal-menu">
             <li>
-                <a href="index.html" class=" normal" >HOME</a>
+                <a href="../index.html" class=" normal" >HOME</a>
             </li>
             <!--Portifólio-->
             <li>
@@ -39,7 +39,7 @@
                 </ul> 
             </li>
             <li>
-                <a href="./contato.html" class="normal">CONTATO</a>
+                <a href="../contato.html" class="normal">CONTATO</a>
             </li>
             <li><!--Butão de Loja-->
                 <a href="https://www.cupomfiscaleletronico.com.br/" target="_blank">
@@ -50,7 +50,7 @@
                 </a>
             </li>
             <li><!--Botão Suporte-->
-                <a href="suporte.html">
+                <a href="../suporte.html">
                     <div class="button_support">
                         <span class="button_icon support_icon"><ion-icon name="headset-outline"></ion-icon></span>
                         <span class="button_text">SUPORTE</span>
@@ -85,37 +85,38 @@
         </section>
 
     <!-- texto produto -->
-    <div class="produto-texto">
-        <h1>Bistec Edu</h1>
-        <p>
-            Constantemente, a implementação de um software de gestão acaba por falhar, porque não é dada a atenção necessária a esse profissional que utilizará a ferramenta no dia-a-dia. Para evitar este tipo de situação, <strong>o Bistec Edu fornece formação para toda a sua equipa explorar 100% da capacidade das soluções adquiridas.</strong>
-        </p>
+        <div class="produto-texto">
+            <h1>Bistec Edu</h1>
+            <p>
+                Constantemente, a implementação de um software de gestão acaba por falhar, porque não é dada a atenção necessária a esse profissional que utilizará a ferramenta no dia-a-dia. Para evitar este tipo de situação, <strong>o Bistec Edu fornece formação para toda a sua equipa explorar 100% da capacidade das soluções adquiridas.</strong>
+            </p>
 
-        <p>
-            Muitas vezes a implantação de um software de gestão fracassa porque não é dada a atenção necessária àquele profissional que irá, de fato, fazer uso da ferramenta no dia a dia: o usuário.
-        </p>
+            <p>
+                Muitas vezes a implantação de um software de gestão fracassa porque não é dada a atenção necessária àquele profissional que irá, de fato, fazer uso da ferramenta no dia a dia: o usuário.
+            </p>
 
-        <p>
-            Por isso, um dos aspectos mais importantes é a questão do treinamento. Quando o usuário não recebe um treinamento adequado, ele não faz um bom uso da ferramenta e sente-se frustrado. Como resultado, ele pode passar a evitar o uso do software, voltando a executar tarefas da maneira como fazia antes da implantação.
-        </p>
+            <p>
+                Por isso, um dos aspectos mais importantes é a questão do treinamento. Quando o usuário não recebe um treinamento adequado, ele não faz um bom uso da ferramenta e sente-se frustrado. Como resultado, ele pode passar a evitar o uso do software, voltando a executar tarefas da maneira como fazia antes da implantação.
+            </p>
 
-        <p>
-            O ideal é que o usuário receba um treinamento constante (ou por um período maior), de forma personalizada, que permita que ele aprenda a utilizar todos os recursos do software de gestão da melhor maneira possível. Este comprometimento com o usuário gera resultados extremamente benéficos para a empresa, principalmente ao relacionado à valorização do investimento realizado.
-        </p>
+            <p>
+                O ideal é que o usuário receba um treinamento constante (ou por um período maior), de forma personalizada, que permita que ele aprenda a utilizar todos os recursos do software de gestão da melhor maneira possível. Este comprometimento com o usuário gera resultados extremamente benéficos para a empresa, principalmente ao relacionado à valorização do investimento realizado.
+            </p>
 
-        <p>
-            Temos profissionais com mais de 25 anos de experiência académica e educadores certificados do Google nível 1.
-        </p>
+            <p>
+                Temos profissionais com mais de 25 anos de experiência académica e educadores certificados do Google nível 1.
+            </p>
 
-        <h2>
-            Acesso aos nossos recursos de aprendizado:
-        </h2>
+            <h2>
+                Acesso aos nossos recursos de aprendizado:
+            </h2>
 
-        <div class="bistec-edu-plataformas">
-            <a href="https://edu.bistec.com.br/ead/login/index.php" target="_blank"><img src="../assets/images/img-lg-bistec-edu.png" alt="Bistec Edu"></a>
-            <a href="https://www.youtube.com/c/BISTECEDU" target="_blank"><img src="../assets/images/youtube.png" alt="Canal do YouTube da Bistec Edu"></a>
+            <div class="bistec-edu-plataformas">
+                <a href="https://edu.bistec.com.br/ead/login/index.php" target="_blank"><img src="../assets/images/img-lg-bistec-edu.png" alt="Bistec Edu"></a>
+                <a href="https://www.youtube.com/c/BISTECEDU" target="_blank"><img src="../assets/images/youtube.png" alt="Canal do YouTube da Bistec Edu"></a>
+            </div>
         </div>
-    </div>
+    </article>
 
     <!-- rodapé -->
 
