--- a/produtos/gdpr.html
+++ b/produtos/gdpr.html
@@ -21,7 +21,7 @@
         </a>
         <ul class="normal-menu">
             <li>
-                <a href="index.html" class=" normal" >HOME</a>
+                <a href="../index.html" class=" normal" >HOME</a>
             </li>
             <!--Portifólio-->
             <li>
@@ -39,7 +39,7 @@
                 </ul> 
             </li>
             <li>
-                <a href="./contato.html" class="normal">CONTATO</a>
+                <a href="../contato.html" class="normal">CONTATO</a>
             </li>
             <li><!--Butão de Loja-->
                 <a href="https://www.cupomfiscaleletronico.com.br/" target="_blank">
@@ -50,7 +50,7 @@
                 </a>
             </li>
             <li><!--Botão Suporte-->
-                <a href="suporte.html">
+                <a href="../suporte.html">
                     <div class="button_support">
                         <span class="button_icon support_icon"><ion-icon name="headset-outline"></ion-icon></span>
                         <span class="button_text">SUPORTE</span>
@@ -85,15 +85,16 @@
         </section>
 
     <!-- texto produto -->
-    <div class="produto-texto">
-        <h1>Bistec GDPR</h1>
-        <p>
-            A GDPR (General Data Protection Regulation) 2016/679 é um regulamento da legislação europeia sobre privacidade e proteção de dados pessoais, aplicável a todos os indivíduos da União Europeia e do Espaço Económico Europeu que foi implementado em 2018.
-        </p>
-        <p>
-            A GDPR define multas, sanções e processos cível aos controladores e operadores que não cumpram as suas bases legais, de acordo com o tipo de evento e gravidade.
-        </p>
-    </div>
+        <div class="produto-texto">
+            <h1>Bistec GDPR</h1>
+            <p>
+                A GDPR (General Data Protection Regulation) 2016/679 é um regulamento da legislação europeia sobre privacidade e proteção de dados pessoais, aplicável a todos os indivíduos da União Europeia e do Espaço Económico Europeu que foi implementado em 2018.
+            </p>
+            <p>
+                A GDPR define multas, sanções e processos cível aos controladores e operadores que não cumpram as suas bases legais, de acordo com o tipo de evento e gravidade.
+            </p>
+        </div>
+    </article>
 
     <!-- rodapé -->
 
