--- a/produtos/cloud.html
+++ b/produtos/cloud.html
@@ -21,7 +21,7 @@
         </a>
         <ul class="normal-menu">
             <li>
-                <a href="index.html" class=" normal" >HOME</a>
+                <a href="../index.html" class=" normal" >HOME</a>
             </li>
             <!--Portifólio-->
             <li>
@@ -39,7 +39,7 @@
                 </ul> 
             </li>
             <li>
-                <a href="./contato.html" class="normal">CONTATO</a>
+                <a href="../contato.html" class="normal">CONTATO</a>
             </li>
             <li><!--Butão de Loja-->
                 <a href="https://www.cupomfiscaleletronico.com.br/" target="_blank">
@@ -50,7 +50,7 @@
                 </a>
             </li>
             <li><!--Botão Suporte-->
-                <a href="suporte.html">
+                <a href="../suporte.html">
                     <div class="button_support">
                         <span class="button_icon support_icon"><ion-icon name="headset-outline"></ion-icon></span>
                         <span class="button_text">SUPORTE</span>
@@ -84,22 +84,23 @@
             </div> -->
         </section>
 
-    <!-- texto produto -->
-    <div class="produto-texto">
-        <h1>Bistec Cloud</h1>
-        <p>
-            As informações corporativas estão cada vez mais digitalizadas e online, por isso as empresas devem se prevenir contra a perda de informações importantes.
-        </p>
-        <p>
-            Com essa solução você ajuda a proteger os arquivos que a sua empresa precisa e os restaura rapidamente após uma falha do sistema ou perda de dados.
-        </p>
-        <p>
-            O Bistec Cloud é a solução ideal de backup em nuvem, seguro e elástico, sem custos de investimentos em infraestrutura e de acordo com o Regulamento Geral de Proteção de Dados (GDPR).
-        </p>
-        <p>
-            <a class="nice_button" target="_blank" href="https://bistec.backupmanager.info/">SAIBA MAIS</a>
-        </p>
-    </div>
+        <!-- texto produto -->
+        <div class="produto-texto">
+            <h1>Bistec Cloud</h1>
+            <p>
+                As informações corporativas estão cada vez mais digitalizadas e online, por isso as empresas devem se prevenir contra a perda de informações importantes.
+            </p>
+            <p>
+                Com essa solução você ajuda a proteger os arquivos que a sua empresa precisa e os restaura rapidamente após uma falha do sistema ou perda de dados.
+            </p>
+            <p>
+                O Bistec Cloud é a solução ideal de backup em nuvem, seguro e elástico, sem custos de investimentos em infraestrutura e de acordo com o Regulamento Geral de Proteção de Dados (GDPR).
+            </p>
+            <p>
+                <a class="nice_button" target="_blank" href="https://bistec.backupmanager.info/">SAIBA MAIS</a>
+            </p>
+        </div>
+    </article>
 
     <!-- rodapé -->
 
