--- a/produtos/renting.html
+++ b/produtos/renting.html
@@ -21,7 +21,7 @@
         </a>
         <ul class="normal-menu">
             <li>
-                <a href="index.html" class=" normal" >HOME</a>
+                <a href="../index.html" class=" normal" >HOME</a>
             </li>
             <!--Portifólio-->
             <li>
@@ -39,7 +39,7 @@
                 </ul> 
             </li>
             <li>
-                <a href="./contato.html" class="normal">CONTATO</a>
+                <a href="../contato.html" class="normal">CONTATO</a>
             </li>
             <li><!--Butão de Loja-->
                 <a href="https://www.cupomfiscaleletronico.com.br/" target="_blank">
@@ -50,7 +50,7 @@
                 </a>
             </li>
             <li><!--Botão Suporte-->
-                <a href="suporte.html">
+                <a href="../suporte.html">
                     <div class="button_support">
                         <span class="button_icon support_icon"><ion-icon name="headset-outline"></ion-icon></span>
                         <span class="button_text">SUPORTE</span>
@@ -110,7 +110,7 @@
                 <li>- Maior Eficiência em TI</li>
                 <li>- Locação 100% sem entrada</li>
             </ul>
-        </p> <!--
+     <!--
         <p class="link_renting">
             <a link_renting href="https://api.whatsapp.com/send?phone=5513992101945">Entre em contato conosco para saber mais</a>
         </p>    -->
@@ -118,6 +118,7 @@
             <a class="nice_button" target="_blank" href="https://api.whatsapp.com/send?phone=5513992101945">ENTRE EM CONTATO</a>
         </p>   
     </div>
+    </article>
 
     <!-- rodapé -->
 
