--- a/produtos/soft.html
+++ b/produtos/soft.html
@@ -21,7 +21,7 @@
         </a>
         <ul class="normal-menu">
             <li>
-                <a href="index.html" class=" normal" >HOME</a>
+                <a href="../index.html" class=" normal" >HOME</a>
             </li>
             <!--Portifólio-->
             <li>
@@ -39,7 +39,7 @@
                 </ul> 
             </li>
             <li>
-                <a href="./contato.html" class="normal">CONTATO</a>
+                <a href="../contato.html" class="normal">CONTATO</a>
             </li>
             <li><!--Butão de Loja-->
                 <a href="https://www.cupomfiscaleletronico.com.br/" target="_blank">
@@ -50,7 +50,7 @@
                 </a>
             </li>
             <li><!--Botão Suporte-->
-                <a href="suporte.html">
+                <a href="../suporte.html">
                     <div class="button_support">
                         <span class="button_icon support_icon"><ion-icon name="headset-outline"></ion-icon></span>
                         <span class="button_text">SUPORTE</span>
@@ -102,6 +102,7 @@
             Agora, se você esta procurando a melhor solução para gestão da sua empresa, <a target="_blank" href="https://hiper.com.br/experimente-gratis/?HCode=BIS01625">clique aqui e Experimente grátis por 7 dias!</a>
         </p>
     </div>
+    </article>
 
     <!-- rodapé -->
 
