mudança final form

--- a/contato.html
+++ b/contato.html
@@ -69,7 +69,7 @@
     <!-- CORPO -->
     <article>
         <div class="formulario">
-            <form action="ttps://formsubmit.co/bistec@bistec.com.br" method="POST" id="formContato">
+            <form action="https://formsubmit.co/bistec@bistec.com.br" method="POST" id="formContato">
                 <h1>Formulário para Contato</h1>
                 <div class="campos">
                     <label>Nome completo:</label><br>
