retorna inputs de configuração do formulário

--- a/contato.html
+++ b/contato.html
@@ -70,6 +70,10 @@
     <article>
         <div class="formulario">
             <form action="https://formsubmit.co/bistec@bistec.com.br" method="POST" id="formContato">
+                <input type="hidden" name="_next" value="http://bistec.com.pt">
+                <input type="hidden" name="_autoresponse" value="Email Recebido. Obrigado e caso seja necessário, estaremos entrando em contato assim que possivel">
+                <input type="hidden" name="_subject" value="Email Site Bistec Portugal">
+
                 <h1>Formulário para Contato</h1>
                 <div class="campos">
                     <label>Nome completo:</label><br>
@@ -82,8 +86,7 @@
                 </div>            
                 
                 <div class="campos">
-                    <label>Assunto do e-mail:</label>
-                    <br>
+                    <label>Assunto do e-mail:</label><br>
                     <input type="text" name="Assunto do e-mail" placeholder="Digite aqui do que seu e-mail se trata" required>
                 </div>
                 
