mudanças finais rodapé e alerts

--- a/produtos/renting.html
+++ b/produtos/renting.html
@@ -42,7 +42,7 @@
                 <a href="../contato.html" class="normal">CONTATO</a>
             </li>
             <li><!--Butão de Loja-->
-                <a href="https://www.cupomfiscaleletronico.com.br/" target="_blank">
+                <a href="#" onclick="clickStore()">
                     <div class="button" >
                         <span class="button_icon"><ion-icon name="cart-outline"></ion-icon></span>
                         <span class="button_text">LOJA</span>
@@ -132,7 +132,7 @@
             <a href="https://www.flickr.com/bistec" target="_blank"><ion-icon name="logo-flickr"></ion-icon></a>
             <a href="https://soundcloud.com/bistecweb" target="_blank"><ion-icon name="logo-soundcloud"></ion-icon></a>
             <a href="https://linkedin.com/company/bistec" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a>
-            <a href="https://google.com/maps/dir/bistec" target="_blank"><ion-icon name="location" class="ionspecial"></ion-icon></a>
+            <a href="#"><ion-icon name="location" class="ionspecial" onclick="clickLocation()"></ion-icon></a>
         </div>
 
         <div class="contacts">
@@ -144,13 +144,6 @@
             </div>
 
             <div class="contact item2">
-                    <a href="https://api.whatsapp.com/send?phone=5513992101945" target="_blank"><img src="../assets/images/whatsapp.png" alt="Logo Whatsapp Business"> Whatsapp Business </a>
-                <p>
-                    <a href="https://api.whatsapp.com/send?phone=5513992101945" target="_blank">+55 (13) 99210-1945</a>
-                </p>
-            </div>
-
-            <div class="contact item3">
                 <a href="https://bistec.com.br">
                     <img src="../assets/images/brazil.png" alt="Brasil País"> Bistec Brasil 
                 </a>  
@@ -161,13 +154,22 @@
                     <a href="tel:+55(13)3522-8184">+55 (13) 3522-8184</a>
                 </p>
             </div>
+
+            <div class="contact item3">
+                    <a href="https://api.whatsapp.com/send?phone=5513992101945" target="_blank"><img src="../assets/images/whatsapp.png" alt="Logo Whatsapp Business"> Whatsapp Business </a>
+                <p>
+                    <a href="https://api.whatsapp.com/send?phone=5513992101945" target="_blank">+55 (13) 99210-1945</a>
+                </p>
+            </div> 
+            <!--
             <div class="contact item4">
                 <p>
-                    <img src="../assets/images/clock.png" alt="Logo Horário"> Funcionamento 
+                    <img src="assets/images/clock.png" alt="Logo Horário"> Funcionamento 
                 </p> 
                 <p>Segunda à Sexta:</p> 
-                <p>08:15h - 18:00h</p>
-            </div>
+                <p>Horário a ser definido</p>
+            </div> 
+            -->
         </div>
     </footer>
     <div class="footer-copyright">
