tentando consertar erro acessibilidade

--- a/produtos/cloud.html
+++ b/produtos/cloud.html
@@ -114,7 +114,7 @@
             <a href="https://www.flickr.com/bistec" target="_blank"><ion-icon name="logo-flickr"></ion-icon></a>
             <a href="https://soundcloud.com/bistecweb" target="_blank"><ion-icon name="logo-soundcloud"></ion-icon></a>
             <a href="https://linkedin.com/company/bistec" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a>
-            <a href="#"><ion-icon name="location" class="ionspecial" onclick="clickLocation()"></ion-icon></a>
+            <a href="#" class="IconLocation"><ion-icon name="location" class="ionspecial"></ion-icon></a>
         </div>
 
         <div class="contacts">
