logica de envio de formulario em desenvolvimento

--- a/contato.html
+++ b/contato.html
@@ -69,7 +69,7 @@
     <!-- CORPO -->
     <article>
         <div class="formulario">
-            <form action="contato.php" method="POST" id="formContato">
+            <form action="./email/contato.php" method="POST" id="formContato">
                 <h1>Formulário para Contato</h1>
                 <div class="campos">
                     <label>Nome completo:</label><br>
