header mobile e redirecionamento portfolio arrumados

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
                     <a href="index.html" class="normal" >HOME</a>
                 </li>
                 <li>
-                    <a href="./contato.html" class="normal">CONTATO</a>
+                    <a href="contato.html" class="normal">CONTATO</a>
                 </li>
                 <li><!--Portifólio-->
-                    <a href="#bistec-automaçao" class="normal">PORTFÓLIO <ion-icon name="chevron-down-outline"></ion-icon></a>  
+                    <a class="normal">PORTFÓLIO <ion-icon name="chevron-down-outline"></ion-icon></a>  
                     <ul class="normal-submenu">
                         <li><a href="produtos/automacao.html"><ion-icon name="at-sharp"></ion-icon> BISTEC AUTOMAÇÃO</a></li>
                         <li><a href="produtos/cloud.html"> <ion-icon name="cloud-done-sharp"></ion-icon> BISTEC CLOUD</a></li>
@@ -85,7 +85,7 @@
 
 
         <!-- PRODUTOS -->
-        <section class="bistec-produtos" id="bistec-automaçao">
+        <section class="bistec-produtos">
                 <img src="assets/images/img-lg-bistec-automacao.png" alt="Bistec Automação"> 
                 <div class="texto-produtos">
                     <h2>Troque a anotação pela automação</h2>
