--- a/produtos/automacao.html
+++ b/produtos/automacao.html
@@ -24,9 +24,12 @@
             <li>
                 <a href="../index.html" class=" normal" >HOME</a>
             </li>
+            <li>
+                <a href="../contato.html" class="normal">CONTATO</a>
+            </li>
             <!--Portifólio-->
             <li>
-                <a href="index.html" class="normal">PORTFÓLIO <ion-icon name="chevron-down-outline"></ion-icon></a>  
+                <a href="../index.html" class="normal">PORTFÓLIO <ion-icon name="chevron-down-outline"></ion-icon></a>  
                 <ul class="normal-submenu">
                     <li><a href="automacao.html"><ion-icon name="at-sharp"></ion-icon> BISTEC AUTOMAÇÃO</a></li>
                     <li><a href="cloud.html"> <ion-icon name="cloud-done-sharp"></ion-icon> BISTEC CLOUD</a></li>
@@ -38,9 +41,6 @@
                     <li><a href="soft.html"><ion-icon name="disc-sharp"></ion-icon> BISTEC SOFT</a></li>
                     <li><a href="wifi.html"> <ion-icon name="wifi-sharp"></ion-icon> BISTEC WIFI</a></li>
                 </ul> 
-            </li>
-            <li>
-                <a href="../contato.html" class="normal">CONTATO</a>
             </li>
             <li><!--Butão de Loja-->
                 <a href="#" onclick="clickStore()">
