--- a/suporte.html
+++ b/suporte.html
@@ -21,11 +21,13 @@
         </a>
         <ul class="normal-menu">
             <li>
-                <a href="index.html" class=" normal" >HOME</a>
+                <a href="index.html" class="normal" >HOME</a>
             </li>
-            <!--Portifólio-->
             <li>
-                <a href="index.html" class="normal">PORTFÓLIO <ion-icon name="chevron-down-outline"></ion-icon></a>  
+                <a href="contato.html" class="normal">CONTATO</a>
+            </li>
+            <li><!--Portifólio-->
+                <a class="normal">PORTFÓLIO <ion-icon name="chevron-down-outline"></ion-icon></a>  
                 <ul class="normal-submenu">
                     <li><a href="produtos/automacao.html"><ion-icon name="at-sharp"></ion-icon> BISTEC AUTOMAÇÃO</a></li>
                     <li><a href="produtos/cloud.html"> <ion-icon name="cloud-done-sharp"></ion-icon> BISTEC CLOUD</a></li>
@@ -38,12 +40,9 @@
                     <li><a href="produtos/wifi.html"> <ion-icon name="wifi-sharp"></ion-icon> BISTEC WIFI</a></li>
                 </ul> 
             </li>
-            <li>
-                <a href="./contato.html" class="normal">CONTATO</a>
-            </li>
             <li><!--Butão de Loja-->
-                <a href="#" onclick="clickStore()">
-                    <div class="button" >
+                <a href="#">
+                    <div class="button">
                         <span class="button_icon"><ion-icon name="cart-outline"></ion-icon></span>
                         <span class="button_text">LOJA</span>
                     </div>
@@ -63,7 +62,7 @@
                 <ion-icon name="menu-outline"></ion-icon>                  
             </li>
         </ul>
-    </header>
+</header>
 
     <!-- CORPO -->
     <article id="first_section">
